# AutonomousEV_ROS_sim

devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/erickshaw_controller/: simple_controller.py
devel/lib/pkgconfig/: erickshaw_controller.pc  erickshaw_description.pc
devel/share/erickshaw_controller/cmake/: erickshaw_controllerConfig.cmake
devel/share/erickshaw_description/cmake/: erickshaw_descriptionConfig.cmake
src/erickshaw_controller/: CMakeLists.txt  package.xml
src/erickshaw_controller/config/: erickshaw_controller.yaml
src/erickshaw_controller/launch/: controller.launch
src/erickshaw_controller/src/erickshaw_controller/: simple_controller.py
src/erickshaw_description/: CMakeLists.txt  package.xml
src/erickshaw_description/launch/: display.launch  gazebo.launch  world.launch
src/erickshaw_description/mesh/erickshaw/: inertia_tensor.py  roof.stl
src/erickshaw_description/rviz/erickshaw/: display.rviz
src/erickshaw_description/urdf/: camera_gazebo.xacro  erickshaw.urdf.xacro  erickshaw.urdf.xacro.copy  erickshaw_gazebo.xacro  include_file.xacro  test.urdf
src/erickshaw_description/worlds/: main.world
src/erickshaw_ocv/: CMakeLists.txt  package.xml
src/erickshaw_ocv/scripts/: lane_detection_SWS.py  lane_detection_SWS_sim.py
